objects/ARA__c.object
<CustomObject>
    <fields>
        <fullName>ARARemediationQualityNotes__c</fullName>
        <description>ARA Remediation Quality Notes</description>
        <label>ARA Remediation Quality Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARA_Age__c</fullName>
        <formula>IF(
  OR(
    ISPICKVAL(Status__c,"Closed-Resolved"),
    ISPICKVAL(Status__c,"Closed-Lost"),
    ISPICKVAL(Status__c,"Settlement"),
    ISPICKVAL(Status__c,"Closed Won"),
    ISPICKVAL(Status__c,"Unqualified")
  ),
  ARA_Closed_DateTime__c - CreatedDate,
  NOW() - CreatedDate
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARA Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARA_Category__c</fullName>
        <label>Primary ARA Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption/Low Usage</fullName>
                </value>
                <value>
                    <fullName>Customer Business Process</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Customer Turnover</fullName>
                </value>
                <value>
                    <fullName>Economics/Pricing</fullName>
                </value>
                <value>
                    <fullName>Onboarding/Training</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARA_Closed_DateTime__c</fullName>
        <label>ARA Resolved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ARA_Debrief_COmpleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARA Debrief Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARA_Emergency_Notes__c</fullName>
        <inlineHelpText>This text will be seen at the account level and should be used for any ARA notes you want all of CS/Sales to be aware of.</inlineHelpText>
        <label>ARA Emergency Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARA_Remediation_Quality__c</fullName>
        <description>Satisfaction ratings for the ARA/Escalations Group</description>
        <label>ARA Remediation Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Neither Satisfied nor Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>1 - Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARA_Resolution_Details__c</fullName>
        <label>ARA Resolution Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARA_Won_Lost_DateTime__c</fullName>
        <label>ARA Won/Lost DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_ARR_Close__c</fullName>
        <description>This Update the Share of wallet field "EC Contracted ARR (Client)". This is updated via Workflow.</description>
        <label>Account ARR @ Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ARR_Open__c</fullName>
        <description>This Update the Share of wallet field "EC Contracted ARR (Client)". This is updated via Workflow.</description>
        <label>Account ARR @ Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>/* Old Formula

HYPERLINK("https://cvent.my.salesforce.com/"&amp;Opportunity__r.Owner.Id, Opportunity__r.Owner.FirstName &amp; ' ' &amp; Opportunity__r.Owner.LastName)

*/



HYPERLINK("https://cvent.my.salesforce.com/"&amp;Account__r.OwnerId, Account__r.Owner.FirstName &amp; ' ' &amp; Account__r.Owner.LastName)</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>This field is used in Cart Cost analysis email template</description>
        <formula>Account__r.Owner.FirstName &amp; ' ' &amp; Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ARAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Amount_Up_for_Renewal__c</fullName>
        <formula>Opportunity__r.Actual_Amount_Up_for_Renewal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Amount Up for Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_At_Risk_Value__c</fullName>
        <label>Additional At-Risk Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Other Details – Remediation Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ARAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CART_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description># 11585978
#11696878</description>
        <inlineHelpText>Field for ARA Manager use only - triggers alert to CS leadership</inlineHelpText>
        <label>CART Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRC_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ARAs_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Counterpart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field for ARA team use only</inlineHelpText>
        <label>CS Counterpart</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ARAs_Escalations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CVII_ID__c</fullName>
        <formula>Account__r.CVII_ID__c</formula>
        <label>CVII ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVII_Link__c</fullName>
        <formula>"https://cvii/Customers/FindCustomer.aspx?CustKeyword="&amp;CVII_ID__c&amp;"&amp;txtContractNum=&amp;txtOrgKeyword=&amp;cboAcctMgrStub=NULL&amp;cboSalespersonStub=NULL&amp;cboCustStatusID=1&amp;rdoSortOn=name"</formula>
        <label>CVII Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <formula>Opportunity__r.New_Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_ARR__c</fullName>
        <formula>/* Account__r.Current_Account_ARR__c */

Account__r.Share_of_Wallet_Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_on_Billing__c</fullName>
        <label>Current on Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <formula>Account__r.Cvent_Account_ID__c</formula>
        <label>Cvent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA__c</fullName>
        <inlineHelpText>Dead on Arrival – have we received cancellation or AR notice</inlineHelpText>
        <label>DOA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_AR_Cancellation_Notice_Received__c</fullName>
        <label>Date AR/Cancellation Notice Received:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Call__c</fullName>
        <label>Date/Time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_Count_to_Renewal__c</fullName>
        <formula>Renewal_Date__c-TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Count to Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Notes__c</fullName>
        <description>Case #13442387</description>
        <label>Deferred Notes</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Team__c</fullName>
        <label>Deferred Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM Management</fullName>
                </value>
                <value>
                    <fullName>AppSupport Escalation</fullName>
                </value>
                <value>
                    <fullName>Escalation Desk</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>PSG Management</fullName>
                </value>
                <value>
                    <fullName>Senior Management</fullName>
                </value>
                <value>
                    <fullName>Success Management</fullName>
                </value>
                <value>
                    <fullName>Other CS Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Issue__c</fullName>
        <label>Description of Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_Primary_Category_Details__c</fullName>
        <label>Escalated Primary Category Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Escalation_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Usability</fullName>
                </value>
                <value>
                    <fullName>Missing/Non-Existent Feature</fullName>
                </value>
                <value>
                    <fullName>Feature Limitations</fullName>
                </value>
                <value>
                    <fullName>Product Speed</fullName>
                </value>
                <value>
                    <fullName>Product Quality (bugs)</fullName>
                </value>
                <value>
                    <fullName>Product Availability (downtime)</fullName>
                </value>
                <value>
                    <fullName>CSC Support</fullName>
                </value>
                <value>
                    <fullName>Overall Support Complaints</fullName>
                </value>
                <value>
                    <fullName>Customer Care Complaints</fullName>
                </value>
                <value>
                    <fullName>Not A Fit</fullName>
                </value>
                <value>
                    <fullName>Non-CS Support Complaints</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Age__c</fullName>
        <formula>IF(
ISPICKVAL(Status__c,"Closed-Resolved"),
ARA_Closed_DateTime__c - CreatedDate, 
NOW() - CreatedDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Category__c</fullName>
        <label>Escalation Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption/Low Usage</fullName>
                </value>
                <value>
                    <fullName>Customer Business Process</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Customer Turnover</fullName>
                </value>
                <value>
                    <fullName>Economics/Pricing</fullName>
                </value>
                <value>
                    <fullName>Onboarding/Training</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Closed_DateTime__c</fullName>
        <label>Escalation Closed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Name__c</fullName>
        <displayFormat>ARA-{000000}</displayFormat>
        <label>Escalation Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Future_ARA_Risk__c</fullName>
        <label>Future ARA Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Green_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_the_call_been_scheduled_with_custome__c</fullName>
        <label>Has the Customer call been scheduled</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Requested_Action__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Expectations</fullName>
                </value>
                <value>
                    <fullName>Timelines</fullName>
                </value>
                <value>
                    <fullName>Contracting Issue/s</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Workaround Reliant</fullName>
                </value>
                <value>
                    <fullName>Presold Feature</fullName>
                </value>
                <value>
                    <fullName>No TSC/Demo</fullName>
                </value>
                <value>
                    <fullName>Client Services Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lessons_Learned__c</fullName>
        <label>Lessons Learned</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName +" "+ Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity__r.New_Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associate this ARA to the largest renewal opportunity of those at risk, if renewal is less than 365 days out, otherwise leave blank.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ARAs/Escalations</relationshipLabel>
        <relationshipName>ARAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Renewal_Opp_Val__c</fullName>
        <formula>Opportunity__r.New_Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Renewal Opp Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Renewal_Opp_Value__c</fullName>
        <label>Original Renewal Opp Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Category_Details__c</fullName>
        <label>Summary of Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Details__c</fullName>
        <label>Primary Category Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ARA_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CSC/PC Support</fullName>
                </value>
                <value>
                    <fullName>Customer Care Complaints</fullName>
                </value>
                <value>
                    <fullName>Feature Limitations</fullName>
                </value>
                <value>
                    <fullName>Flex</fullName>
                </value>
                <value>
                    <fullName>Missing/Non-Existent Feature</fullName>
                </value>
                <value>
                    <fullName>Non-CS Support Complaints</fullName>
                </value>
                <value>
                    <fullName>Non-Performance Claim</fullName>
                </value>
                <value>
                    <fullName>Not A Fit</fullName>
                </value>
                <value>
                    <fullName>Overall Support Complaints</fullName>
                </value>
                <value>
                    <fullName>Product Availability (downtime)</fullName>
                </value>
                <value>
                    <fullName>Product Quality (bugs)</fullName>
                </value>
                <value>
                    <fullName>Product Speed</fullName>
                </value>
                <value>
                    <fullName>Usability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ARAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line_Impacted__c</fullName>
        <label>All Product Lines Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Event Management</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Root_Cause__c</fullName>
        <label>Product Root Cause</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>Universal Appointments</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Event Management</fullName>
                </value>
                <value>
                    <fullName>Event In a Box</fullName>
                </value>
                <value>
                    <fullName>Exhibitor Resource Center</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Integration Hub</fullName>
                </value>
                <value>
                    <fullName>LeadCapture</fullName>
                </value>
                <value>
                    <fullName>Universal LeadCapture</fullName>
                </value>
                <value>
                    <fullName>OA360</fullName>
                </value>
                <value>
                    <fullName>OA360 - RFID/Advanced Printing</fullName>
                </value>
                <value>
                    <fullName>OnArrival Premium</fullName>
                </value>
                <value>
                    <fullName>Out of the Box Integration</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
                <value>
                    <fullName>Speaker Resource Center</fullName>
                </value>
                <value>
                    <fullName>Platform Interdependencies</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_AppSupport_Tickets__c</fullName>
        <label>Related AppSupport Tickets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_App_Support_Ticket_SF_Link__c</fullName>
        <label>Related App Support Ticket SF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Enhancement_Request_SF_Link__c</fullName>
        <label>Related Enhancement Request SF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Enhancement_Requests__c</fullName>
        <label>Related Enhancement Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_PSP_SF_Link__c</fullName>
        <label>Related PSP SF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Relevant_Account_History_Previous_Issue__c</fullName>
        <label>Relevant Account History/Previous Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remediation_Effort_Level__c</fullName>
        <label>Remediation Effort Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remediation_Resources_Used__c</fullName>
        <label>Remediation Resources Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Escalation</fullName>
                </value>
                <value>
                    <fullName>Advanced Product/AppSupport/Sales Engineering Support</fullName>
                </value>
                <value>
                    <fullName>Contract Renegotiation</fullName>
                </value>
                <value>
                    <fullName>Event QB</fullName>
                </value>
                <value>
                    <fullName>On-Site Training and/or Meeting</fullName>
                </value>
                <value>
                    <fullName>PSG</fullName>
                </value>
                <value>
                    <fullName>Refund, Credit or Discount</fullName>
                </value>
                <value>
                    <fullName>Re-onboarding</fullName>
                </value>
                <value>
                    <fullName>Sales Demo Team</fullName>
                </value>
                <value>
                    <fullName>Service/Support Concession</fullName>
                </value>
                <value>
                    <fullName>Support Team Changes (HODI or transfer)</fullName>
                </value>
                <value>
                    <fullName>Technical Sales Consultant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>Account__r.Contract_End_Date_Dev__c</formula>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Value__c</fullName>
        <formula>/* Opportunity__r.New_Contract_Total__c */

Opportunity__r.Net_Amount_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Action__c</fullName>
        <label>Requested Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email Response</fullName>
                </value>
                <value>
                    <fullName>Proactive Email</fullName>
                </value>
                <value>
                    <fullName>Scheduled Call</fullName>
                </value>
                <value>
                    <fullName>Proactive Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Outcome__c</fullName>
        <description>Used for one-off escalation object only</description>
        <label>Resolution Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancelled/Opted Out</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Likely to Renew</fullName>
                </value>
                <value>
                    <fullName>Renegotiation</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Unlikely to Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause_Summary__c</fullName>
        <label>Root Cause Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_ARA_Category__c</fullName>
        <label>Secondary ARA Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adoption/Low Usage</fullName>
                </value>
                <value>
                    <fullName>Customer Business Process</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Customer Turnover</fullName>
                </value>
                <value>
                    <fullName>Economics/Pricing</fullName>
                </value>
                <value>
                    <fullName>Onboarding/Training</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>